--- a/gb/16/8/30/n8251276.md
+++ b/gb/16/8/30/n8251276.md
@@ -1,16 +1,16 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ntzvvt379/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ntzvvt379/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ntzvvt379/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ntzvvt379/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ntzvvt379/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ntzvvt379/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ntzvvt379/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ntzvvt379/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ntzvvt379/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ntzvvt379/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ntzvvt379/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ntzvvt379/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ntzvvt379/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ntzvvt379/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ntzvvt379/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ntzvvt379/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ntzvvt379/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ntzvvt379/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ntzvvt379/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ntzvvt379/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ntzvvt379/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ntzvvt379/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ntzvvt379/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ntzvvt379/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ntzvvt379/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ntzvvt379/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ntzvvt379/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ntzvvt379/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ntzvvt379/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ntzvvt379/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ntzvvt379/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ntzvvt379/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ntzvvt379/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ntzvvt379/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ntzvvt379/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ntzvvt379/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ntzvvt379/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ntzvvt379/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ntzvvt379/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ntzvvt379/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ntzvvt379/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ntzvvt379/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ntzvvt379/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ntzvvt379/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ntzvvt379/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ntzvvt379/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ntzvvt379/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>新生入小学 美国新移民妈妈须知5条秘籍</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2011/08/1108200220241778-600x400.jpg" />
 <h6>孩子要上小学了，家长们要做好准备，与孩子一同迎接这个新的改变。（Fotolia）
 </h6>
 <hr>
-<p>【大纪元2016年08月30日讯】（大纪元记者桑妮纽约报导）愉快的暑假生活马上就要结束，美国不少适龄儿童就要进入<ahref="https://github.com/ntzvvt379/djy/blob/master/gb/tag/%E5%B0%8F%E5%AD%A6.md#1">小学</a>。上小学是人生中的一个重要成长阶段，从<ahref="https://github.com/ntzvvt379/djy/blob/master/gb/tag/%E6%8A%A5%E5%90%8D.md#1">报名</a>入学，直到孩子能安心在学校上课，对在纽约的新移民<ahref="https://github.com/ntzvvt379/djy/blob/master/gb/tag/%E5%AE%B6%E9%95%BF.md#1">家长</a>来说，掌握以下五条秘籍，就可轻松搞定不用愁。</p>
-<h3><strong>秘籍一</strong><strong>? </strong><strong>重要<ahref="https://github.com/ntzvvt379/djy/blob/master/gb/tag/%E6%96%87%E4%BB%B6.md#1">文件</a>提前准备</strong></h3>
-<p>纽约<ahref="https://github.com/ntzvvt379/djy/blob/master/gb/tag/%E5%B0%8F%E5%AD%A6.md#1">小学</a>主要分为两大类：公立学校和私立学校。纽约市私立学校向纽约所有市民开放，基本不设任何住址限制，每月都要收取几百元甚至更高的费用；而为儿童提供免费教育的公立学校，通常根据孩子的家庭住址来决定是否可以在此校入学。</p>
-<p>根据纽约儿童权益保护协会2015年9月发布的指南<ahref="https://github.com/ntzvvt379/djy/blob/master/gb/tag/%E6%96%87%E4%BB%B6.md#1">文件</a>，<ahref="https://github.com/ntzvvt379/djy/blob/master/gb/tag/%E5%AE%B6%E9%95%BF.md#1">家长</a>在为孩子办理入学时需要携带以下文件：</p>
-<p>（一）居住在该学区的证明，如租约或房契证明，煤气费、有线电视费、电费、水费账单等。<ahref="https://github.com/ntzvvt379/djy/blob/master/gb/tag/%E6%8A%A5%E5%90%8D.md#1">报名</a>时每个学校会给出可接受的居住证明的完整列表，通常需要提供其中的2～3种即可。</p>
+<p>【大纪元2016年08月30日讯】（大纪元记者桑妮纽约报导）愉快的暑假生活马上就要结束，美国不少适龄儿童就要进入<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%B0%8F%E5%AD%A6.md#1">小学</a>。上小学是人生中的一个重要成长阶段，从<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%8A%A5%E5%90%8D.md#1">报名</a>入学，直到孩子能安心在学校上课，对在纽约的新移民<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%AE%B6%E9%95%BF.md#1">家长</a>来说，掌握以下五条秘籍，就可轻松搞定不用愁。</p>
+<h3><strong>秘籍一</strong><strong>? </strong><strong>重要<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%96%87%E4%BB%B6.md#1">文件</a>提前准备</strong></h3>
+<p>纽约<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%B0%8F%E5%AD%A6.md#1">小学</a>主要分为两大类：公立学校和私立学校。纽约市私立学校向纽约所有市民开放，基本不设任何住址限制，每月都要收取几百元甚至更高的费用；而为儿童提供免费教育的公立学校，通常根据孩子的家庭住址来决定是否可以在此校入学。</p>
+<p>根据纽约儿童权益保护协会2015年9月发布的指南<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%96%87%E4%BB%B6.md#1">文件</a>，<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%AE%B6%E9%95%BF.md#1">家长</a>在为孩子办理入学时需要携带以下文件：</p>
+<p>（一）居住在该学区的证明，如租约或房契证明，煤气费、有线电视费、电费、水费账单等。<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%8A%A5%E5%90%8D.md#1">报名</a>时每个学校会给出可接受的居住证明的完整列表，通常需要提供其中的2～3种即可。</p>
 <p>（二）孩子的出生证明、护照或其他可证明出生日期的法定文件。</p>
 <p>（三）之前原居住地学校的成绩单（转校生适用，建议提供，非必需）。</p>
 <p>（四）孩子出生以来所有预防接种疫苗纪录和近期体检记录。</p>
@@ -23,7 +23,7 @@
 <p>虽然有些孩子在中国接种的疫苗都有完整记录，但仍需要在美国进行体检时，请医生将这些接种过的疫苗用英文填写到一张表格上，而这张表格是需要提交到学校的。</p>
 <p>注射疫苗时需要注意，一定要注意孩子的身体状况，如果处在感冒恢复期，那最好推迟一个星期，以免孩子旧病复发，或产生疫苗严重反应。</p>
 <h3><strong>秘籍三</strong><strong>?? </strong>“<strong>体验</strong>”<strong>小学生活</strong><strong> ?</strong><strong>减少焦虑</strong></h3>
-<p><ahref="https://github.com/ntzvvt379/djy/blob/master/gb/tag/%E6%96%B0%E7%94%9F%E5%85%A5%E5%AD%A6.md#1">新生入学</a>将要面临新的环境，包括完全陌生的老师和同学、陌生的课堂、要受到新规则的约束，害怕上学后失去原来的自由，也不知道将如何面对新环境，而产生莫名的焦虑。这时需要家长家长帮助孩子提前“体验”小学生活，消除这种焦虑情绪。</p>
+<p><ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%96%B0%E7%94%9F%E5%85%A5%E5%AD%A6.md#1">新生入学</a>将要面临新的环境，包括完全陌生的老师和同学、陌生的课堂、要受到新规则的约束，害怕上学后失去原来的自由，也不知道将如何面对新环境，而产生莫名的焦虑。这时需要家长家长帮助孩子提前“体验”小学生活，消除这种焦虑情绪。</p>
 <p>——提前带孩子到小学进行参观。让孩子了解学校离家的路程，上学所需要的时间；带孩子看看学校的设施，如教室、体育室、餐厅、活动区等，让孩子对学校生活心生向往。</p>
 <p>——请邻居或朋友的大孩子讲学校生活，谈论学习中的有趣实验、同学相处的乐趣、好玩的体育项目等。</p>
 <p>——家长可以和孩子一起模仿上课游戏，分别扮演老师和学生，让孩子在不知不觉中熟悉课堂行为习惯，如怎么坐、怎么站、怎么举手、用多大音量回答问题以及基本礼貌用语等。</p>
@@ -43,47 +43,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/ntzvvt379/djy/blob/master/gb/15/3/10/n4383671.md#1">纽约一小学取消作业 华裔校长有信心</a></li>
-<li><a href="https://github.com/ntzvvt379/djy/blob/master/gb/16/4/5/n7522514.md#1">纽约市38所学校 9月增设双语课程</a></li>
-<li><a href="https://github.com/ntzvvt379/djy/blob/master/gb/16/4/7/n7529714.md#1">未来五年 纽约华社学区扩容</a></li>
-<li><a href="https://github.com/ntzvvt379/djy/blob/master/gb/16/4/9/n7536437.md#1">反校园暴力 家长状告纽约市教育局</a></li>
-<li><a href="https://github.com/ntzvvt379/djy/blob/master/gb/16/4/18/n7565906.md#1">双语教师资格 纽约华裔可在线报读</a></li>
-<li><a href="https://github.com/ntzvvt379/djy/blob/master/gb/16/6/2/n7957072.md#1">纽约市教育局首次中文家长会 法拉盛登场</a></li>
-<li><a href="https://github.com/ntzvvt379/djy/blob/master/gb/16/6/10/n7983031.md#1">纽约市教育局 推特殊高中录取族裔多元化</a></li>
-<li><a href="https://github.com/ntzvvt379/djy/blob/master/gb/16/7/15/n8101176.md#1">纽约华裔家长暑假换学区 长岛是热门</a></li>
-<li><a href="https://github.com/ntzvvt379/djy/blob/master/gb/16/7/16/n8105110.md#1">纽约市府暑期免费午餐 在法拉盛设点</a></li>
-<li><a href="https://github.com/ntzvvt379/djy/blob/master/gb/21/1/2/n12661316.md#1">纽约公校一天才班与普通班重组 家长忧心</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/3/10/n4383671.md#1">纽约一小学取消作业 华裔校长有信心</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/4/5/n7522514.md#1">纽约市38所学校 9月增设双语课程</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/4/7/n7529714.md#1">未来五年 纽约华社学区扩容</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/4/9/n7536437.md#1">反校园暴力 家长状告纽约市教育局</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/4/18/n7565906.md#1">双语教师资格 纽约华裔可在线报读</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/6/2/n7957072.md#1">纽约市教育局首次中文家长会 法拉盛登场</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/6/10/n7983031.md#1">纽约市教育局 推特殊高中录取族裔多元化</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/7/15/n8101176.md#1">纽约华裔家长暑假换学区 长岛是热门</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/7/16/n8105110.md#1">纽约市府暑期免费午餐 在法拉盛设点</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/1/2/n12661316.md#1">纽约公校一天才班与普通班重组 家长忧心</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/ntzvvt379/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/26/n10513103.md#1" target="_blank">唐铭：维权老兵需了解韩战的中国战俘刺青浪潮</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/5/25/n7931386.md#1" target="_blank">生的希望</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/1/n10752911.md#1" target="_blank">智诚：“除夕宴”在恸哭声中进行</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/30/n11488843.md#1" target="_blank">34国法轮功学员欧洲集会游行 英议员声援</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/plsdii3995/djy/blob/master/gb/21/7/7/n13073680.md#1">【命理】年过50无子 命师算出他40岁早得一子</a></li>
-<li><a href="https://github.com/plsdii3995/djy/blob/master/gb/21/7/8/n13077166.md#1">【忠义传】断桥救主 喝退曹军的张飞</a></li>
-<li><a href="https://github.com/plsdii3995/djy/blob/master/gb/21/7/15/n13091924.md#1">【未解之谜】文革横死 转生却不为复仇</a></li>
-<li><a href="https://github.com/plsdii3995/djy/blob/master/gb/21/7/15/n13090127.md#1">法男心灵感应与预知能力 震撼《美国达人秀》</a></li>
-<li><a href="https://github.com/plsdii3995/djy/blob/master/gb/21/7/12/n13083124.md#1">对于邪灵“附体” 东西方文化如何对待？</a></li>
-<li><a href="https://github.com/plsdii3995/djy/blob/master/gb/21/7/21/n13105563.md#1">【时事纵横】郑州洪灾四大疑点 南京疫情突起</a></li>
-<li><a href="https://github.com/plsdii3995/djy/blob/master/gb/21/7/21/n13105546.md#1">【新闻看点】郑州是内涝还是洪水 习淡化灾情？</a></li>
-<li><a href="https://github.com/plsdii3995/djy/blob/master/gb/21/6/15/n13024284.md#1">【思想领袖】巴斯：中共窥探德州空军基地？</a></li>
-<li><a href="https://github.com/plsdii3995/djy/blob/master/gb/21/7/20/n13102635.md#1">【一线采访】郑州大水 地铁被淹 多人死亡</a></li>
-<li><a href="https://github.com/plsdii3995/djy/blob/master/gb/21/7/20/n13102383.md#1">前海军中校：美日中暗战台海 习最怕解放军</a></li>
-<li><a href="https://github.com/plsdii3995/djy/blob/master/gb/21/7/20/n13101581.md#1">河南全省遭罕见暴雨袭击 洪水淹没小镇</a></li>
-<li><a href="https://github.com/plsdii3995/djy/blob/master/gb/21/7/19/n13100030.md#1">邓丽君别样“现身” 完美原声鼓励台湾防疫</a></li>
-<li><a href="https://github.com/plsdii3995/djy/blob/master/gb/21/7/19/n13099664.md#1">吴亦凡陷桃色纠纷 反击大陆网红索讨巨款</a></li>
-<li><a href="https://github.com/plsdii3995/djy/blob/master/gb/21/7/20/n13102805.md#1">吴奇隆刘诗诗结婚6年 友人爆夫妻俩互动模式</a></li>
-<li><a href="https://github.com/plsdii3995/djy/blob/master/gb/21/7/19/n13099205.md#1">夏宇童打疫苗残剂 以为无症状半夜突高烧呕吐</a></li>
-<li><a href="https://github.com/plsdii3995/djy/blob/master/gb/21/7/19/n13100208.md#1">频被拍肚凸传怀孕 范冰冰：是谁在诋毁我</a></li>
-<li><a href="https://github.com/plsdii3995/djy/blob/master/gb/21/7/19/n13099742.md#1">“记忆3宝”泡茶喝 增强记忆力、击退大脑健忘</a></li>
-<li><a href="https://github.com/plsdii3995/djy/blob/master/gb/21/7/17/n13095397.md#1">中医3步抗老养颜 天天做去皱纹、让皮肤变年轻</a></li>
-<li><a href="https://github.com/plsdii3995/djy/blob/master/gb/21/7/21/n13103380.md#1">疫苗混打保护力更强？这组合或比2剂辉瑞效果好</a></li>
-<li><a href="https://github.com/plsdii3995/djy/blob/master/gb/21/7/19/n13098907.md#1">女子在餐厅独自庆生 员工围过来祝贺 她哭了</a></li>
-<li><a href="https://github.com/plsdii3995/djy/blob/master/gb/21/7/20/n13101397.md#1">当心iPhone过热 苹果公司透露正常使用温度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689709.md#1">唐瑞讲故事｜朗读｜小熊维尼第五章</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13687492.md#1">【未解之谜】濒死体验 神启：生命可以选择</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688852.md#1">【新闻大家谈】美国2疏忽 中共借机叫板三角联盟</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13677160.md#1">早餐来一杯治愈大脑！清除脑雾的方法</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ntzvvt379/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ntzvvt379/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/8/30/n8251276.htm">新生入小学 美国新移民妈妈须知5条秘籍</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/8/30/n8251276.htm">新生入小学 美国新移民妈妈须知5条秘籍</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ntzvvt379/djy/blob/master/gb/16/8/30/n8251276.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ntzvvt379/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ntzvvt379/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ntzvvt379/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ntzvvt379/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ntzvvt379/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ntzvvt379/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ntzvvt379/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ntzvvt379/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ntzvvt379/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ntzvvt379/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ntzvvt379/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ntzvvt379/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ntzvvt379/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ntzvvt379/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ntzvvt379/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ntzvvt379/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ntzvvt379/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ntzvvt379/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ntzvvt379/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ntzvvt379/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ntzvvt379/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ntzvvt379/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ntzvvt379/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ntzvvt379/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ntzvvt379/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ntzvvt379/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ntzvvt379/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ntzvvt379/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ntzvvt379/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ntzvvt379/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ntzvvt379/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ntzvvt379/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ntzvvt379/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ntzvvt379/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ntzvvt379/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ntzvvt379/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ntzvvt379/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ntzvvt379/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ntzvvt379/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ntzvvt379/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ntzvvt379/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ntzvvt379/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ntzvvt379/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ntzvvt379/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ntzvvt379/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ntzvvt379/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ntzvvt379/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ntzvvt379/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/16/8/30/n8251276.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
